--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 
 <head>
-  <p>
+  <p align="center">
   GitHub Pages of Sietse de Kok - 10551638
   Minor Programmeren
   </p>
@@ -9,6 +9,12 @@
 
 <body>
   <p>
-    Data processing:
+    <p>
+      Data processing assignments
+      <p>
+        Week 2:
+        Week 3:
+      </p>
+    </p>
   </p>
 </body>
