--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         Week 2: 
       </p>
       <p>
-        Week 3: 
+        Week 3: http://htmlpreview.github.io/?https://github.com/Sieetse94/Data-Processing/blob/master/Homework/Week%203/barchart.html
       </p>
     </p>
   </p>
