--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
       <p>
         Week 2: 
       </p>
-      <p>
-        Week 3: http://htmlpreview.github.io/?https://github.com/Sieetse94/Data-Processing/blob/master/Homework/Week%203/barchart.html
+      <p href="http://htmlpreview.github.io/?https://github.com/Sieetse94/Data-Processing/blob/master/Homework/Week%203/barchart.html">
+        Week 3: Barchart of duration of rainfall at De Bilt using d3
       </p>
     </p>
   </p>
